7.23.0 (27-01-2025)
- Refactor: Remove references to deprecated GradeScaleEnum related domain [#qubIT-Fenix-1784]

7.22.0 (15-01-2025)
- Refactor: Changes sendConcludeEmail to use SystemSender [#qubIT-Omnis-7780]

7.21.5 (13-01-2025)
- Refactor: change references of EntryPhase to AdmissionPhase [#qubIT-Fenix-5905]

7.21.4 (16-12-2024)
- Bug Fix: When retrieving the PersonCustomer#getActiveCustomer(), validate that the active customer is found. If it is not, throw exception [#qubIT-Fenix-6386]

7.21.3 (12-12-2024)
- Refactor: Delete SAS/SICABE JSP and controllers [#qubIT-Fenix-6343]

7.21.2 (05-11-2024)
- Bug Fix: Fix error in submiting angular form, which the angular logic was colliding with the support form [#qubIT-Fenix-6049]

7.21.1 (22-10-2024)
- Bug fix: Allow to create old service requests for degrees without admin office [#UL-FBA-1899]

7.21.0 (17-10-2024)
- Refactor: Add subclasses of RegistrationState [#qubIT-Fenix-5944] 
- Refactor: Remove unused classes that have EntryPhase [#qubIT-Fenix-5905]

7.20.2 (03-10-2024)
- Refactor: Replace usages of deprecated RegistrationStateTypeEnum [#qubIT-Fenix-2587]

7.20.1 (18-09-2024)
- Refactor: Replace usages of deprecated RegistrationStateTypeEnum [#qubIT-Fenix-2587]

7.20.0 (06-09-2024)
- Refactor: Replace usages of deprecated RegistrationStateTypeEnum [#qubIT-Fenix-2587]
- Refactor: Use new method for creating or adding existing attends to enrolment [#qubIT-Fenix-5598]
- Improvement: Updates guava from 21.0 to 33.2.1-jre [#qubIT-Omnis-5869]

7.19.0 (05-08-2024)
- Refactor: Remove legacy evaluation season and temporary enrolment logic [#qubIT-Fenix-5554]

7.18.0 (27-06-2024)
- Refactor: Uses ExcelUtil to handle excel files [#qubIT-Omnis-6065]

7.17.0 (17-06-2024)
- Refactor: Updates ff dependency [#qubIT-Omnis-4749]

7.16.0 (04-06-2024)
- Refactor: Move to this module, Dandelion configurations from fenixedu-candidacies-extensions and fenixedu-base web-fragment [#qubIT-Omnis-5884]

7.15.3 (27-05-2024)