@@ -1,3 +1,5 @@
+- Refactor: Replace references to Email and Message classes [#qubIT-Omnis-8403]
+
 7.23.0 (27-01-2025)
 - Refactor: Remove references to deprecated GradeScaleEnum related domain [#qubIT-Fenix-1784]
 
